2002-09-24  Jody Goldber <jody@gnome.org>

	* Release 2.0.2.91

2002-08-21  Jody Goldberg <jody@gnome.org>

	* Release 2.0.1.1

2002-08-06  Jody Goldberg <jody@gnome.org>

	* Release 2.0.1

2002-07-12  Jody Goldberg <jody@gnome.org>

	* background-properties.glade : The last of the ui-review.

2002-07-02  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=84014
	* background-properties-capplet.c (drag_data_received_cb) : unescape
	  the path.

2002-06-27  Jody Goldberg <jody@gnome.org>

	* background-properties-capplet.c (main) : use capplet_set_icon.

2002-06-18  Jody Goldberg <jody@gnome.org>

	http://bugzilla.gnome.org/show_bug.cgi?id=85628
	* background-properties-capplet.c (main) : The dialog
	    - should not be modal
	    - has no parent to destroy with
	    - and should have a seperator
	    - set default response

2002-06-17  Jody Goldberg <jody@gnome.org>

	* Release 2.0.0

2002-06-05  Gediminas Paulauskas <menesis@delfi.lt>

	* background-properties.glade: radiobutton1 and similar things should
	not be translatable.

2002-05-28  Satyajit Kanungo <satyajit.kanungo@wipro.com>

        * background-properties-capplet.c : Changed the help file link
          to get the help document from user-guide.

2002-05-26  Jody Goldberg <jody@gnome.org>

	* background-properties-capplet.c (cb_dialog_response) : improve
	  handling of help failures.

Sun May 26 11:29:14 2002  Jonathan Blandford  <jrb@gnome.org>

	* background-properties-capplet.c (main): use APPID instead of
	argv[0]

Thu May 16 02:25:03 2002  Jonathan Blandford  <jrb@gnome.org>

	* background-properties-capplet.c (drag_data_received_cb): accept
	drops from the nautilus patterns pallet.  There's something broken
	here, though.

2002-05-10  Jody Goldberg <jody@gnome.org>

	* background-properties.glade : merge in the missing atk patch.

2002-05-09  Jody Goldberg <jody@gnome.org>

	* background-properties-capplet.c (main) : add a help button.
