@@ -1,3 +1,9 @@
+2002-11-13  Pasupathi Duraisamy <pasupathi.duraisamy@wipro.com>
+
+	* background-properties-capplet.c (drag_data_received_cb):
+	Reset Picture option to "Wall paper" only in the case of 
+	"none" while DnD. Fixes #94329
+         	
 2002-09-24  Jody Goldber <jody@gnome.org>
 
 	* Release 2.0.2.91
